--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
   min-width: 200px;
   min-height: 100px;
   background-color: hsl(231, 6%, 43%);
-  margin-left: 30px;
+  margin-left: 90px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,17 +94,120 @@ body {
 }
 
 .section-two {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .info-header {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 1000;
   letter-spacing: -2px;
   padding: 35px
+}
+
+.info-content {
+  display: flex;
+  justify-content: center;
+}
+
+.info-part {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 30px;
+  width: 150px;
+}
+
+.info-image {
+  display: flex;
+  width: inherit;
+  height: 150px;
+  margin-bottom: 10px;
+  border: 3px solid #2c8bda;
+  border-radius: 10px;
+}
+
+.info-text {
+  display: flex;
+  text-align: center;
+  font-size: 14px;
+}
+
+.section-three {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+  margin: 100 0;
+  background-color: #E5E7EB;
+}
+
+.review {
+  display: flex;
+  flex-direction: column;
+  min-width: 50%;
+  max-width: 60%;
+}
+
+.quote {
+  flex: 1 1 auto;
+  font-size: 2em;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.quote-source {
+  flex: 1 1 auto;
+  align-self: flex-end;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 20px 50px 0 0;
+}
+
+.section-four {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+
+.call-to-action {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 130px;
+  border-style: none;
+  border-radius: 10px;
+  background-color: #2c8bda;
+  color: white;
+}
+
+.cta-message {
+  margin-right: 100px;
+}
+
+.cta-header {
+  font-size: 17px;
+  font-weight: 900;
+}
+
+.cta-content {
+  font-size: 14px;
+}
+
+.cta-button {
+  background-color: inherit;
+  color: inherit;
+  font-weight: 700;
+  padding: 6px 25px;
+  border-radius: 7px;
+  border-width: 1px;
+  border: solid;
+  border-width: 2px;
 }
 
 .footer {
@@ -112,7 +215,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 72px;
-
 }
 
 
